@@ -36,13 +36,13 @@ public class ScriptTest extends TestSupport {
      * @throws IllegalAccessException
      * @throws InstantiationException
      */
-    public void testInvokeMethodFallsThroughToMethodClosureInBinding() throws IOException, CompilationFailedException, IllegalAccessException, InstantiationException {
+    public void testInvokeMethodFallsThroughToMethodClosureInBinding() throws IOException, CompilationFailedException, IllegalAccessException, InstantiationException, NoSuchMethodException {
         String text = "if (method() == 3) { println 'succeeded' }";
 
         GroovyCodeSource codeSource = new GroovyCodeSource(text, "groovy.script", "groovy.script");
         GroovyClassLoader loader = new GroovyClassLoader(Thread.currentThread().getContextClassLoader());
         Class clazz = loader.parseClass(codeSource);
-        Script script = ((Script) clazz.newInstance());
+        Script script = ((Script) clazz.getDeclaredConstructor().newInstance());
 
         Binding binding = new Binding();
         binding.setVariable("method", new MethodClosure(new Dummy(), "method"));
